--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "name": "Aaron Fernandes 300773526"
   },
   "scripts": {
-    "start": "node ./bin/www",
-    "watch": "nodemon ./bin/www"
+    "start": "node ./server/bin/www",
+    "watch": "nodemon ./server/bin/www"
   },
   "dependencies": {
+    "@types/passport": "^0.3.3",
+    "@types/passport-local": "^1.0.29",
+    "@types/passport-local-mongoose": "^4.0.8",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
@@ -18,11 +21,19 @@
     "markdown-pdf": "^7.0.0",
     "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "serve-favicon": "~2.3.0"
   },
   "engines": {
     "vscode": "^0.10.0",
     "node": ">=6.0.0",
     "npm": ">=3.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.0.35",
+    "@types/mongoose": "^4.7.6",
+    "@types/node": "^7.0.5"
   }
 }
