--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/passport-local": "^1.0.29",
     "@types/passport-local-mongoose": "^4.0.8",
     "body-parser": "~1.15.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "express-session": "^1.15.1",
     "markdown-pdf": "^7.0.0",
     "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
