--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@types/express": "^4.0.35",
     "@types/mongoose": "^4.7.6",
-    "@types/node": "^7.0.5"
+    "@types/node": "^7.0.5",
+    "eslint": "^3.16.1"
   }
 }
