fixed eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -66,7 +66,7 @@
             "error",
             "never"
         ],
-        "func-style": "error",
+        "func-style": "warn",
         "generator-star-spacing": "error",
         "global-require": "error",
         "guard-for-in": "error",
@@ -170,7 +170,7 @@
         "no-script-url": "error",
         "no-self-compare": "error",
         "no-sequences": "error",
-        "no-shadow": "error",
+        "no-shadow": "off",
         "no-shadow-restricted-names": "error",
         "no-spaced-func": "error",
         "no-sync": "error",
@@ -185,7 +185,7 @@
         "no-unmodified-loop-condition": "error",
         "no-unneeded-ternary": "error",
         "no-unused-expressions": "error",
-        "no-use-before-define": "error",
+        "no-use-before-define": "warn",
         "no-useless-call": "error",
         "no-useless-computed-key": "error",
         "no-useless-concat": "error",
