--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment1aaronfernandes",
+  "name": "express profile with auth",
   "version": "0.0.1",
   "private": true,
   "author": {
