--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express profile with auth",
+  "name": "express-profile-with-auth",
   "version": "0.5.3",
   "private": true,
   "author": {
@@ -16,7 +16,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
-    "express": "~4.14.0",
+    "express": "^4.14.1",
     "express-session": "^1.15.1",
     "markdown-pdf": "^7.0.0",
     "mongoose": "^4.8.1",
